--- a/2-class/exercises/functional1.html
+++ b/2-class/exercises/functional1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Functions: Task 1</title>
     <style>
       p {
@@ -17,25 +17,33 @@
   </head>
 
   <body>
-
-    <section class="preview">
-
-
-
-    </section>
-
+    <section class="preview"></section>
   </body>
   <script>
-    const names = ['Chris', 'Li Kang', 'Anne', 'Francesca', 'Mustafa', 'Tina', 'Bert', 'Jada']
-    const para = document.createElement('p');
+    const names = [
+      "Chris",
+      "Li Kang",
+      "Anne",
+      "Francesca",
+      "Mustafa",
+      "Tina",
+      "Bert",
+      "Jada",
+    ];
+    const para = document.createElement("p");
 
     // Add your code here
 
+    function chooseName(nameArr) {
+      const randomName = nameArr[Math.floor(Math.random() * nameArr.length)];
+      return randomName;
+    }
+
+    console.log(chooseName(names));
     // Don't edit the code below here!
 
-    const section = document.querySelector('section');
+    const section = document.querySelector("section");
 
     section.appendChild(para);
   </script>
-
 </html>
