completed fun1 and fun3

--- a/2-class/exercises/functional1.html
+++ b/2-class/exercises/functional1.html
@@ -39,7 +39,7 @@
       return randomName;
     }
 
-    console.log(chooseName(names));
+    para.textContent = chooseName(names);
     // Don't edit the code below here!
 
     const section = document.querySelector("section");
