--- a/2-class/exercises/functional2.html
+++ b/2-class/exercises/functional2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Functions: Task 2</title>
     <style>
       p {
@@ -21,31 +21,27 @@
   </head>
 
   <body>
+    <section class="preview"></section>
 
-    <section class="preview">
-
-    </section>
-
-    <canvas width="480" height="320">
-
-    </canvas>
-
+    <canvas width="480" height="320"> </canvas>
   </body>
   <script>
-    const canvas = document.querySelector('canvas');
-    const ctx = canvas.getContext('2d');
+    const canvas = document.querySelector("canvas");
+    const ctx = canvas.getContext("2d");
 
     const x = 50;
     const y = 60;
     const width = 100;
     const height = 75;
-    const color = 'blue';
+    const color = "blue";
 
     // Add your code here
+    function createRectangle(xC, yC, h, w, color) {
+
+    }
 
     // Don't edit the code below here!
 
-    const section = document.querySelector('section');
+    const section = document.querySelector("section");
   </script>
-
 </html>
