--- a/2-class/exercises/oop1.html
+++ b/2-class/exercises/oop1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>OOJS: Task 1</title>
     <style>
       p {
@@ -17,23 +17,13 @@
   </head>
 
   <body>
-
-    <section class="preview">
-
-
-
-    </section>
-
+    <section class="preview"></section>
   </body>
   <script>
-  class Shape {
-
-    name;
-    sides;
-    sideLength;
-
-  }
-
+    class Shape {
+      name;
+      sides;
+      sideLength;
+    }
   </script>
-
 </html>
