completed OOP1 and OOP2 challenges.

--- a/2-class/exercises/oop1.html
+++ b/2-class/exercises/oop1.html
@@ -13,7 +13,7 @@
         box-sizing: border-box;
       }
     </style>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/2-class/exercises/stlyles.css" />
   </head>
 
   <body>
@@ -24,6 +24,26 @@
       name;
       sides;
       sideLength;
+
+      constructor(name, sides, sideLength) {
+        this.name = name;
+        this.sides = sides;
+        this.sideLength = sideLength;
+      }
+
+      calcPerimeter() {
+        return this.sides * this.sideLength;
+      }
     }
+
+    const square = new Shape("square", 4, 5);
+    console.log(
+      `The perimeter of the ${square.name} is: ${square.calcPerimeter()}`
+    );
+
+    const triangle = new Shape("triangle", 3, 3);
+    console.log(
+      `The perimeter of the ${triangle.name} is: ${triangle.calcPerimeter()}`
+    );
   </script>
 </html>
