--- a/2-class/exercises/oop2.html
+++ b/2-class/exercises/oop2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>OOJS: Task 2</title>
     <style>
       p {
@@ -13,20 +13,47 @@
         box-sizing: border-box;
       }
     </style>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/2-class/exercises/stlyles.css" />
   </head>
 
   <body>
-
-    <section class="preview">
-
-
-
-    </section>
-
+    <section class="preview"></section>
   </body>
   <script>
+    class Shape {
+      name;
+      sides;
+      sideLength;
 
+      constructor(name, sides, sideLength) {
+        this.name = name;
+        this.sides = sides;
+        this.sideLength = sideLength;
+      }
+
+      calcPerimeter() {
+        return this.sides * this.sideLength;
+      }
+    }
+
+    class Square extends Shape {
+      constructor(sideLength) {
+        super();
+        this.name = "square";
+        this.sides = 4;
+        this.sideLength = sideLength;
+      }
+
+      calcArea() {
+        return this.sideLength * this.sideLength;
+      }
+    }
+    const square = new Square(5);
+    console.log(
+      "Perimeter of a square with sideLength 5 is:",
+      square.calcPerimeter()
+    );
+
+    console.log("Area of a square with sideLength 5 is:", square.calcArea());
   </script>
-
 </html>
